--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p class='lead'>{% trans "Your account is now activated." %}</p>
+<p class='lead'>{% trans "您的账户现在已经激活" %}</p>
 </div>
 {% endblock %}
