--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div class="container" style="text-align: center">
-    <h3>You have successfully logged out.</h3>
+    <h3>您已经成功登出！</h3>
     <p><a href="{% url 'auth_login' %}">Login</a></p>
   </div>
 {% endblock %}
