--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p class='lead'>{% trans "Password reset successfully" %}</p>
+<p class='lead'>{% trans "密码重置成功！" %}</p>
 
-<p class='lead'><a href="{% url 'auth_login' %}">{% trans "Log in" %}</a></p>
+<p class='lead'><a href="{% url 'auth_login' %}">{% trans "登陆" %}</a></p>
 </div>
 {% endblock %}
