--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -10,12 +10,12 @@
   {% csrf_token %} 
   {{ form|crispy }}
 
-  <input class='btn btn-primary' type="submit" value="{% trans 'Submit' %}" />
+  <input class='btn btn-primary' type="submit" value="{% trans '提交' %}" />
 </form>
 </div>
 {% else %}
 
-<p>{% trans "Password reset failed" %}</p>
+<p>{% trans "密码重置失败" %}</p>
 
 {% endif %}
 
