--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -4,13 +4,13 @@
 
 {% block content %}
   <div class='col-sm-4 col-sm-offset-4 reset-password'>
-    <h1>Password Reset</h1>
-    <p>Reset your password using your email below.</p>
+    <h1>密码重置</h1>
+    <p>使用您下面的邮箱重置密码！</p>
     <form method="post" action=".">
       {% csrf_token %}
       {{ form|crispy }}
 
-      <input class='btn btn-primary' type="submit" value="{% trans 'Reset' %}"/>
+      <input class='btn btn-primary' type="submit" value="{% trans '重置' %}"/>
     </form>
   </div>
 {% endblock %}
