--- a/templates/registration/activate.html
+++ b/templates/registration/activate.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p>{% trans "Account activation failed" %}</p>
+<p>{% trans "账户激活失败" %}</p>
 </div>
 {% endblock %}
