--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p>{% trans "Password changed" %}</p>
+<p>{% trans "密码修改成功！" %}</p>
 </div>
 {% endblock %}
