--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,6 +6,6 @@
   {% csrf_token %} 
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" value="{% trans '提交' %}" />
 </form>
 {% endblock %}
