--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p class='lead text-align-center'>{% trans "Email with password reset instructions has been sent." %}</p>
+<p class='lead text-align-center'>{% trans "密码重置步骤已经发送至您的邮箱！" %}</p>
 </div>
 {% endblock %}
