--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div style='text-align:center'>
-<p class='lead'>{% trans "You are now registered. Activation email sent." %}</p>
+<p class='lead'>{% trans "恭喜您，完成注册！激活邮件已经发送至您的邮箱。" %}</p>
 </div>
 {% endblock %}
