--- a/templates/courses/add_students.html
+++ b/templates/courses/add_students.html
@@ -50,7 +50,7 @@
           </div>
         </form>
 
-        <h5>Added students:</h5>
+        <h5>已经加入的同学:</h5>
         {% if added_students %}
           <table class="table table-condensed table-hover generic-table">
             <thead>
