--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,8 +11,10 @@
       </button>
     </div>
 
-    <!-- Menu items -->
+    <!-- Menu items
     <div class="collapse navbar-collapse" id="mainNavBar">
+     -->
+    <div class="blog-masthead" id="mainNavBar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
         {% if request.user.is_authenticated %}
