--- a/users/static_in_users/static_files/css/breadcrumb.css
+++ b/users/static_in_users/static_files/css/breadcrumb.css
@@ -9,9 +9,9 @@
 }
 
 .title-section {
-    background: #637f83;
+    background: #10ff00;
     position: relative;
-    border-bottom: 1px solid #597275;
+    border-bottom: 1px solid #03ff00;
 }
 
 .title-section h1 {
