--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,9 @@
 </div>
 
 <div id="footer">
-  <div class="container">
+  <div class="container" >
+   <img src="file:///Users/Enming/eLearning/templates/logo.jpg" />
+   <br /> 
     © 于斯人国际跳伞学校
   </div>
 </div>
