--- a/templates/home.html
+++ b/templates/home.html
@@ -4,45 +4,42 @@
 {% block content %}
 
   <!----start-banner---->
-  <div class="banner text-center"></div>
-  <!----end-banner---->
 
-  <!----start-content---->
-  <div class="featured_content" id="feature">
-    <div class="container">
-      <div class="row text-center">
+  
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
-        <div class="col-md-3 feature_grid1">
-          <i class="icon2"> </i>
-          <h3 class="m_1"><a href="#">跳伞历史</a></h3>
-          <p class="m_2">Learn anything by watching educational videos!</p>
-        </div>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="https://4.bp.blogspot.com/-CCNv9SpMOwU/Wo2-ilO2x7I/AAAAAAAAgD4/r5gIzSEjNH8NULqUxMMgpJIPrmTM-m_hQCPcBGAYYCw/s1600/Chicago.gif" alt="Los Angeles" style="width:100%;">
+    </div>
 
-        <div class="col-md-3 feature_grid1">
-          <i class="icon2"> </i>
-          <h3 class="m_1"><a href="#">A证课程</a></h3>
-          <p class="m_2">Make experiments with lectures and discuss it on forums!</p>
-        </div>
+    <div class="item">
+      <img src="http://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1446655168/chicago-header-dg1115.jpg?itok=MqZFOaTi" alt="Chicago" style="width:100%;">
+    </div>
 
-        <div class="col-md-3 feature_grid1">
-          <i class="icon3"> </i>
-          <h3 class="m_1"><a href="#">入营须知</a></h3>
-          <p class="m_2">Improve this website by sharing better solutions!</p>
-        </div>
-
-        <div class="col-md-3 feature_grid1">
-          <i class="icon4"> </i>
-          <h3 class="m_1"><a href="#">Activism</a></h3>
-          <p class="m_2">Get involved with our website by sharing this website!</p>
-        </div>
-
-      </div>
+    <div class="item">
+      <img src="https://images.adsttc.com/media/images/572a/4aae/e58e/ced1/8c00/0043/large_jpg/0493_103_MR.jpg?1462389408" alt="New York" style="width:100%;">
     </div>
   </div>
 
-  <hr/>
-  </div>
-
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+    
 {% endblock %}
 
 
