--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,36 +1,65 @@
 <!-- Navigation bar -->
-<nav class="navbar" role="navigation">
-  <div class="container-fluid">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {margin:0;}
 
-    <!-- Logo -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+.topnav {
+  overflow: hidden;
+  background-color: #F6F6F6;
+}
 
-    <!-- Menu items
-    <div class="collapse navbar-collapse" id="mainNavBar">
-     -->
-    <div class="blog-masthead" id="mainNavBar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
+.topnav li {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  border-bottom: 10px solid transparent;
+}
+
+.topnav li:hover {
+  text-decoration: none;
+  border-bottom: 10px solid red;
+}
+.topnav a:hover {
+  text-decoration: none;
+}
+
+.topnav .active {
+  border-bottom: 10px solid red;
+}
+</style>
+</head>
+
+
+<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar-inner">
+  <div class="container">
+
+
+     <a class="navbar-brand" style="max-height: 40px;padding-top: 0;padding-bottom: 0;"><img src="file:///Users/Enming/eLearning/templates/logo.jpg" /></a>
+
+      
+      <ul class="topnav navbar-nav" >
+      
+        <li><a href="/"> 首页</a></li>
         {% if request.user.is_authenticated %}
-          <li><a href="{% url 'courses' %}"><span class="glyphicon glyphicon-education"></span> 培训课程</a></li>
+          <li><a href="{% url 'courses' %}"></span> 培训课程</a></li>
         {% else %}
-          <li><a href="/"><span class="glyphicon glyphicon-education"></span> 培训课程</a></li>
+          <li><a href="/"></span> 培训课程</a></li>
         {% endif %}
-        <li><a href="{% url 'about' %}"><span class="glyphicon glyphicon-info-sign"></span> 关于</a></li>
-        <li><a href="{% url 'contact' %}"><span class="glyphicon glyphicon-earphone"></span> 联系</a></li>
+        <li><a href="{% url 'about' %}"></span> 关于</a></li>
+        <li><a href="{% url 'contact' %}"></span> 联系</a></li>
         {% if request.user.is_authenticated %}
-          <li><a href="{% url 'forum' %}"><span class="glyphicon glyphicon glyphicon-comment"></span> 问题汇总</a></li>
+          <li><a href="{% url 'forum' %}"></span> 问题汇总</a></li>
         {% endif %}
       </ul>
 
       <!-- Right align -->
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="topnav navbar-nav navbar-right" >
         {% if request.user.is_authenticated %}
           <li><a href="{% url 'profile' %}"><span class="glyphicon glyphicon-user"></span> {{ user.get_username }}</a>
           </li>
@@ -40,6 +69,7 @@
           <li><a href="/accounts/login"><span class="glyphicon glyphicon-user"></span> 登陆</a></li>
         {% endif %}
       </ul>
+    
     </div>
   </div>
-</nav>
+</div>
