--- a/users/static_in_users/static_files/css/home.css
+++ b/users/static_in_users/static_files/css/home.css
@@ -12,6 +12,7 @@ p {
 }
 
 html, body {
+
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 100%;
     background-color: #F6F6F6;
@@ -46,19 +47,19 @@ a {
 }
 
 .nav-wrapper {
-    background-color: #f6f6f6;
+    background-color: #f6ea00;
     margin-bottom: 0;
 }
 
 #mainNavBar li a:hover {
-    color: #fff;
-    background: #e4551d !important;
+    color: #ff0004;
+    background: #0fe416!important;
 }
 
 #mainNavBar li a {
     display: block;
     font-size: 1em;
-    color: #637f83;
+    color: #2736d4;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -70,26 +71,26 @@ a {
 /*--registration templates--*/
 .login {
     margin-top: 4%;
-    color: #637f83;
+    color: #000000;
 }
 
 .registration {
     margin-top: 2%;
-    color: #637f83;
+    color: #000000;
 }
 
 .reset-password {
     margin-top: 4%;
-    color: #637f83;
+    color: #000000;
 }
 
 .form-opt {
-    color: #637f83;
+    color: #c434fc;
 }
 
 /*--feature content--*/
 .featured_content {
-    background: #f6f6f6;
+    background: #f6ec00;
 }
 
 .featured_content a {
@@ -160,8 +161,8 @@ p.m_2 {
     font-size: 1em;
     cursor: pointer;
     border: none;
-    background: #637f83;
-    color: #fff;
+    background: #cf0807;
+    color: #f9ff28;
     font-weight: bold;
     text-decoration: none;
     outline: none;
@@ -176,16 +177,20 @@ p.m_2 {
 }
 
 .feature_btn:hover {
-    background: #e4551d;
+    background: #3433e4;
     color: #fff;
     text-decoration: none;
 }
 
 /*--banner--*/
 .banner {
-    background: url(../img/e-banner.png) no-repeat 0 0;
-    min-height: 350px;
-    background-size: 100% 100%;
+	height: 100vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 @media (min-width: 900px) and (min-height: 650px) {
