--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,10 @@
 
   <!----start-banner---->
 
-  
+ <br /> 
+ <br /> 
+ <br /> 
+ <br />  
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -17,15 +20,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://4.bp.blogspot.com/-CCNv9SpMOwU/Wo2-ilO2x7I/AAAAAAAAgD4/r5gIzSEjNH8NULqUxMMgpJIPrmTM-m_hQCPcBGAYYCw/s1600/Chicago.gif" alt="Los Angeles" style="width:100%;">
+      <img src="media/h1.jpg" style="width:100%;">
     </div>
 
     <div class="item">
-      <img src="http://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1446655168/chicago-header-dg1115.jpg?itok=MqZFOaTi" alt="Chicago" style="width:100%;">
+      <img src="media/h2.jpg" style="width:100%;">
     </div>
 
     <div class="item">
-      <img src="https://images.adsttc.com/media/images/572a/4aae/e58e/ced1/8c00/0043/large_jpg/0493_103_MR.jpg?1462389408" alt="New York" style="width:100%;">
+      <img src="media/h3.jpg"  style="width:100%;">
     </div>
   </div>
 
