--- a/templates/courses/course_box_model.html
+++ b/templates/courses/course_box_model.html
@@ -12,7 +12,9 @@
                 <div class="inner-top">
                   {{ instance.course_name }}
                 </div>
-                <div class="inner-middle"></div>
+                <div class="inner-middle">
+                  <img style="max-height:300px;max-width: 240px;" src="{{instance.img_url}}">
+                </div>
                 <div class="inner-bottom">
                   <span class="author">Author: {{ instance.user }}</span>
                   <span class="course-type">Self-Paced</span>
