--- a/templates/users/student_courses.html
+++ b/templates/users/student_courses.html
@@ -64,9 +64,9 @@
   <script>
     $(document).ready(function () {
       /* Make left-border same height as parent */
-      var rightColumn = $(".col-md-10");
-      var parentHeight = rightColumn.parent().height();
-      rightColumn.css("height", parentHeight);
+      //var rightColumn = $(".col-md-10");
+      //var parentHeight = rightColumn.parent().height();
+      //rightColumn.css("height", parentHeight);
 
       /* Add active class on chapter change */
       var pathname = window.location.pathname;
