--- a/templates/registration/activation_email.html
+++ b/templates/registration/activation_email.html
@@ -1,13 +1,13 @@
 您好！
 <br>
-You (or someone pretending to be you) have asked to register an account at localhost. If this wasn't you, please ignore this email and your address will be removed from our records.
-
-To activate this account, please click the following link within the next 7 days:
+您好！ 
+您（或者其它人）正在AUV在线课堂网站注册账户。如果这不是您本人的请求，请忽略这封邮件，并且您的邮箱记录会被自动移除。 
+请点击下面的连接完成账户激活， 此连接会在7天之后失效。 
 <br>
 
 http://52.14.20.127:8000{% url 'registration_activate' activation_key %}
 <br>
 
-Sincerely
+谢谢，
 <br>
--team-orange 
+AUVS 团队
