--- a/users/static_in_users/static_files/css/breadcrumb.css
+++ b/users/static_in_users/static_files/css/breadcrumb.css
@@ -9,9 +9,9 @@
 }
 
 .title-section {
-    background: #10ff00;
+    background: #fafffe;
     position: relative;
-    border-bottom: 1px solid #03ff00;
+    border-bottom: 1px solid #fafff8;
 }
 
 .title-section h1 {
