--- a/users/static_in_users/static_files/css/about.css
+++ b/users/static_in_users/static_files/css/about.css
@@ -89,7 +89,7 @@ div.list.custom-list ul {
     overflow: hidden;
     width: 50px;
     height: 50px;
-    background: #3A87AD;
+    background: #ad2325;
     color: #ffffff;
     text-align: center;
     text-transform: uppercase;
