--- a/users/static_in_users/static_files/css/base.css
+++ b/users/static_in_users/static_files/css/base.css
@@ -22,10 +22,9 @@ body {
 #footer {
 	width: 100%;
 	position:absolute;
-	background: url(../img/footer.png) no-repeat 0 0;
+	background: url(../img/footer.jpg) no-repeat scroll top transparent;
     background-size: contain;
-    background-position: center;
-    height: 60px;
+    height: 270px;
     background-color: #000000;
 }
 
