--- a/templates/users/student_courses.html
+++ b/templates/users/student_courses.html
@@ -42,8 +42,8 @@
               </div>
             {% else %}
               {% if '.png' in item.file.url or '.jpg' in item.file.url or '.JPG' in item.file.url or '.PNG' in item.file.url  %}
-                <div class="course-inner-content">
-                  <img src="{{ item.file.url }}" alt="Click to Download" width="900" align="middle"/>
+                <div class="course-inner-content"  style="max-width: 900px">
+                  <img src="{{ item.file.url }}" alt="Click to Download" align="middle" style="max-width:100%;" />
                 </div>
               {% endif %}
               {% if '.mp4' in item.file.url %}
