register link change

--- a/templates/registration/activation_email.html
+++ b/templates/registration/activation_email.html
@@ -5,7 +5,7 @@
 请点击下面的连接完成账户激活， 此连接会在7天之后失效。 
 <br>
 
-http://52.14.20.127:8000{% url 'registration_activate' activation_key %}
+http://course.auvskydiving.com{% url 'registration_activate' activation_key %}
 <br>
 
 谢谢，
