logo index link

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,7 +40,7 @@ body {margin:0;}
   <div class="container">
 
 
-     <a class="navbar-brand" style="max-height: 40px;padding-top: 0;padding-bottom: 0;" href="http://www.auvskydiving.com/"><img src="http://course.auvskydiving.com/media/logo.jpg" /></a>
+     <a class="navbar-brand" style="max-height: 40px;padding-top: 0;padding-bottom: 0;" href="http://auvskydiving.com/"><img src="http://course.auvskydiving.com/media/logo.jpg" /></a>
 
       
       <ul class="topnav navbar-nav" >
