--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 {% blocktrans %}重置AUV在线课堂密码 {% endblocktrans %}:
 {% block reset_link %}
-{{ protocol }}://52.14.20.127:8000{% url 'auth_password_reset_confirm' uid token %}
+{{ protocol }}://course.auvskydiving.com{% url 'auth_password_reset_confirm' uid token %}
 {% endblock %}
