--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
   <!-- Using this because of django redux registration which contains built-in validation. -->
   {% if request.user.is_authenticated %}
     <script>
-      window.location.replace("http://52.14.20.127:8000");
+      window.location.replace("http://course.auvskydiving.com");
     </script>
   {% else %}
   <div class='row'>
