--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -30,7 +30,7 @@
   <hr/>
   <div class='row form-opt'>
     <div class='col-sm-4 col-sm-offset-4 text-align-center'>
-      <p>Need to <a href="{% url 'auth_login' %}">Login</a>?</p>
+      <p>需要<a href="{% url 'auth_login' %}">登陆</a>?</p>
     </div>
   </div>
   {% endif %}
